--- a/Spreadsheet/Spreadsheet/Spreadsheet.csproj
+++ b/Spreadsheet/Spreadsheet/Spreadsheet.csproj
@@ -32,6 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DependencyGraph, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\DependencyGraph.dll</HintPath>
+    </Reference>
+    <Reference Include="Formula, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Formula.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +54,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DependencyGraph\DependencyGraph.csproj">
-      <Project>{862ead85-346f-4d2b-a53c-98074ff813ba}</Project>
-      <Name>DependencyGraph</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Formula\Formula.csproj">
-      <Project>{d43d998c-9797-4cf4-9bb0-6de22753849a}</Project>
-      <Name>Formula</Name>
-    </ProjectReference>
+    <Content Include="Dependencies\DependencyGraph.dll" />
+    <Content Include="Dependencies\DependencyGraph.pdb" />
+    <Content Include="Dependencies\Formula.dll" />
+    <Content Include="Dependencies\Formula.pdb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
