--- a/Spreadsheet/Tests/SpreadsheetTests.csproj
+++ b/Spreadsheet/Tests/SpreadsheetTests.csproj
@@ -64,6 +64,10 @@
       <Name>Spreadsheet</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Dependencies\DependencyGraph.dll" />
+    <Content Include="Dependencies\Formula.dll" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
